@@ -1,7 +1,7 @@
 package com.jingluo.util.ot.json;
 
 /**
- * 详细介绍类的情况.
+ * json的bean对象
  *
  * @ClassName JsonBean
  * @Author oldTree
@@ -9,17 +9,19 @@ package com.jingluo.util.ot.json;
  * @Version 1.0
  */
 public class JsonBean {
-    /**
-     * 获取bean
-     * @param resources
-     * @return
-     * @param <T>
-     */
-    <T> T getBean(Class<?> resources){
-        return null;
+    private String json;
+    private StringBuffer jsonContext;
+
+    public JsonBean(String json) {
+        this.json = json;
+        this.jsonContext = new StringBuffer(json);
     }
+    //获取int
     Integer getInt(String key){
-        return new Integer("0");
+        return Integer.valueOf(key);
+    }
+    JsonBean getJsonBean(String key) {
+        return null;
     }
 }
 
